build/doctest/output.txt
Results of doctest builder run on 2021-07-15 14:35:21
=====================================================

Document: vlan
--------------
**********************************************************************
File "vlan.rst", line 59, in default
Failed example:
    my_sweat_vlans = Vlans()
    my_sweat_vlans.add_by_params(id=10)
    my_sweat_vlans.add_by_params(20, type="public", auto_vxlan=False, description="test2", stats=True, active=True, untagged_ports=[243, 244, 245], active_ports=[666], ports=[243, 244, 245, 666])
    print(my_sweat_vlans)
Expected:
      id  type     auto-vxlan    replicators    scope    description    active    stats    ports                 untagged_ports    active_ports    vxlan    vxlanmodu
    ----  -------  ------------  -------------  -------  -------------  --------  -------  --------------------  ----------------  --------------  -------  ---------
      10  private  False                        local                   False     False    []                    []                []
      20  public   False                        local    test2          True      True     [243, 244, 245, 666]  [243, 244, 245]   [666]
Got:
      id  type     auto-vxlan    replicators    scope    description    active    stats    ports                 untagged_ports    active_ports    vxlan    vxlanmodule
    ----  -------  ------------  -------------  -------  -------------  --------  -------  --------------------  ----------------  --------------  -------  -------------
      10  private  False                        local                   False     False    []                    []                []
      20  public   False                        local    test2          True      True     [243, 244, 245, 666]  [243, 244, 245]   [666]
**********************************************************************
File "vlan.rst", line 115, in default
Failed example:
    my_sweat_vlans = Vlans()
    vlan_template = {
             "id": 1,
             "type": "private",
             "auto-vxlan": False,
             "replicators": None,
             "scope": "local",
             "description": "",
             "active": False,
             "stats": False,
             "ports": [],
             "untagged_ports": [],
             "active_ports": [],
             "vxlan": None,
             "vxlanmodule": ""
         }
       my_sweat_vlans.add_by_dict(vlan_template)
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib64/python3.9/doctest.py", line 1336, in __run
        exec(compile(example.source, filename, "single",
      File "/home/jvlk/.local/lib/python3.9/site-packages/sphinx/ext/doctest.py", line 482, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[0]>", line 17
        my_sweat_vlans.add_by_dict(vlan_template)
    IndentationError: unexpected indent
**********************************************************************
File "vlan.rst", line 195, in default
Failed example:
    example_vlans.add_by_params(id=42)
    example_vlans.add_by_params(id=31)
    example_vlans.add_by_params(id=128)
    example_vlans.add_by_params(id=4)
Expected:
    id  type     auto-vxlan    replicators    scope    description    active    stats    ports                 untagged_ports    active_ports    vxlan    vxlanmodu
    ----  -------  ------------  -------------  -------  -------------  --------  -------  --------------------  ----------------  --------------  -------  ---------
      42  private  False                        local                   False     False    []                    []                []
      31  private  False                        local                   False     False    []                    []                []
      128 private  False                        local                   False     False    []                    []                []
      4   private  False                        local                   False     False    []                    []                []
    """
Got nothing
**********************************************************************
File "vlan.rst", line 235, in default
Failed example:
    example_vlans.delete(id=42) # deletes vlan with id 42 and sorts the rest of them by id
Expected:
    id  type     auto-vxlan    replicators    scope    description    active    stats    ports                 untagged_ports    active_ports    vxlan    vxlanmodu
    ----  -------  ------------  -------------  -------  -------------  --------  -------  --------------------  ----------------  --------------  -------  ---------
      4   private  False                        local                   False     False    []                    []                []
      31  private  False                        local                   False     False    []                    []                []
      128 private  False                        local                   False     False    []                    []                []
Got nothing
**********************************************************************
File "vlan.rst", line 265, in default
Failed example:
    try:
         example_vlans.delete(id=67) # if vlan with such id doesn't exist, exception raises
     except:
         print("Vlan with such ID doesn't exist")
Exception raised:
    Traceback (most recent call last):
      File "/usr/lib64/python3.9/doctest.py", line 1336, in __run
        exec(compile(example.source, filename, "single",
      File "/home/jvlk/.local/lib/python3.9/site-packages/sphinx/ext/doctest.py", line 482, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[0]>", line 3
        except:
               ^
    IndentationError: unindent does not match any outer indentation level
**********************************************************************
1 items had failures:
   5 of   5 in default
5 tests in 1 items.
0 passed and 5 failed.
***Test Failed*** 5 failures.

Doctest summary
===============
    5 tests
    5 failures in tests
    0 failures in setup code
    0 failures in cleanup code
